fix: update new dark mode css for select

--- a/src/style/dark.scss
+++ b/src/style/dark.scss
@@ -95,7 +95,7 @@
                 .bottom {
                     -webkit-box-shadow: 2px 4px 10px 1px rgba(255, 255, 255, 0.47);
                     box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
-                    padding: 10px;
+                    padding: 20px;
                     margin: 20px;
                     display: flex;
 
@@ -142,6 +142,17 @@
                                     width: 100%;
                                     padding: 5px;
                                     border: none;
+                                    border-bottom: 1px solid gray;
+                                    background-color: #222;
+                                    /* Dark background color */
+                                    color: #fff;
+                                    /* White text color */
+                                }
+
+                                select {
+                                    // Your styles for the select input go here
+                                    width: 100%;
+                                    padding: 5px;
                                     border-bottom: 1px solid gray;
                                     background-color: #222;
                                     /* Dark background color */
